--- a/styles/controller.css
+++ b/styles/controller.css
@@ -17,21 +17,59 @@ body {
 
 .utility-area {
     height: 20vh;
-    display: grid;
-    grid-template-columns: 0.5fr 4fr 0.5fr;
+  
+    /* width: 100%; */
 }
 
-.utility-area > .quick-actions {
+.grid {
     display: grid;
-    grid-gap: 5px;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 0.5fr 2fr 2fr 0.5fr;
     grid-template-rows: 1fr 1fr;
+    gap: 1rem;
+    height: 100%;
 }
 
-.qa-button {
-    background-color: grey;
-    margin: 0;
-    border-radius: 5px;
+/* .grid > .quick-actions {
+    grid-row: 1/2;
+    grid-column: 2/3;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    height: 50%;
+    aspect-ratio: 1;
+    grid-template-columns: minmax(25%, 1fr) minmax(25%, 1fr);
+    grid-template-rows: minmax(25%, 1fr) minmax(25%, 1fr);
+    color: green;
+    border-color: green;
+    border-style: solid;
+    transform: translateX(50%);
+    gap: 1rem;
+} */
+.qa {
+    overflow: hidden;
+    margin: 10px;
+}
+.qa-button1 {
+    grid-area: 1/2/2/3;
+}
+.qa-button2 {
+    grid-area: 1/3/2/4;
+}
+.qa-button3 {
+    grid-area: 2/2/3/3;
+}
+.qa-button4 {
+    grid-area: 2/3/3/4;
+}
+
+.qa > img {
+    /* grid-area: 1/1/2/2; */
+    /* width: 100%; */
+    height: 100%;
+    border-radius: 12px;
+    aspect-ratio:1;
+    object-fit: contain;
+    transform: translateX(50%);
 }
 
 .keyboard-area {
@@ -50,7 +88,7 @@ body {
 }
 
 .touch-area {
-    height:30vh;
+    height:50vh;
     background-color: rgb(200, 200,200);
     border-radius: 10px;
     border-width: 2px;
@@ -79,9 +117,12 @@ body {
 
 .two-button-rocker {
     /* background-color: grey; */
+    grid-area: 1/4/3/5;
     display: flex;
     flex-direction: column;
-    margin: 2vh 0;
+    /* margin: 2vh 0; */
+    margin: 0;
+    height: 100%;
     gap: 10px;
     /* aspect-ratio: 1; */
 }
