--- a/styles/controller.css
+++ b/styles/controller.css
@@ -29,25 +29,10 @@ body {
     height: 100%;
 }
 
-/* .grid > .quick-actions {
-    grid-row: 1/2;
-    grid-column: 2/3;
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto;
-    height: 50%;
-    aspect-ratio: 1;
-    grid-template-columns: minmax(25%, 1fr) minmax(25%, 1fr);
-    grid-template-rows: minmax(25%, 1fr) minmax(25%, 1fr);
-    color: green;
-    border-color: green;
-    border-style: solid;
-    transform: translateX(50%);
-    gap: 1rem;
-} */
 .qa {
     overflow: hidden;
-    margin: 10px;
+    position: relative;
+    /* margin: 10px; */
 }
 .qa-button1 {
     grid-area: 1/2/2/3;
@@ -63,13 +48,22 @@ body {
 }
 
 .qa > img {
-    /* grid-area: 1/1/2/2; */
-    /* width: 100%; */
+    position: relative;
     height: 100%;
     border-radius: 12px;
     aspect-ratio:1;
     object-fit: contain;
-    transform: translateX(50%);
+    transform: translateX(-100%);
+    right: -100%;
+    border-color: black;
+    border-style: solid;
+    box-sizing: border-box;
+    border-width: 2px;
+}
+
+.qa > img.right {
+    transform: translateX(0%);
+    right: 0;
 }
 
 .keyboard-area {
