--- a/frontend/public/styles/controller.css
+++ b/frontend/public/styles/controller.css
@@ -17,7 +17,7 @@ body {
 
 .utility-area {
     height: 20vh;
-  
+
     /* width: 100%; */
 }
 
@@ -34,24 +34,28 @@ body {
     position: relative;
     /* margin: 10px; */
 }
+
 .qa-button1 {
     grid-area: 1/2/2/3;
 }
+
 .qa-button2 {
     grid-area: 1/3/2/4;
 }
+
 .qa-button3 {
     grid-area: 2/2/3/3;
 }
+
 .qa-button4 {
     grid-area: 2/3/3/4;
 }
 
-.qa > img {
+.qa>img {
     position: relative;
     height: 100%;
     border-radius: 12px;
-    aspect-ratio:1;
+    aspect-ratio: 1;
     object-fit: contain;
     transform: translateX(-100%);
     right: -100%;
@@ -61,17 +65,17 @@ body {
     border-width: 2px;
 }
 
-.qa > img.right {
+.qa>img.right {
     transform: translateX(0%);
     right: 0;
 }
 
 .keyboard-area {
     height: 5vh;
-    padding:0 5vw;
+    padding: 0 5vw;
 }
 
-.keyboard-area > input {
+.keyboard-area>input {
     width: 100%;
     height: 100%;
     box-sizing: border-box;
@@ -82,8 +86,8 @@ body {
 }
 
 .touch-area {
-    height:50vh;
-    background-color: rgb(200, 200,200);
+    height: 50vh;
+    background-color: rgb(200, 200, 200);
     border-radius: 10px;
     border-width: 2px;
     border-style: solid;
@@ -99,19 +103,18 @@ body {
     justify-content: center;
 }
 
-.status-area > .status-light {
+.status-area>.status-light {
     background-color: red;
     width: 10px;
     height: 10px;
     margin: 0;
     border-radius: 5px;
     box-shadow: 0 0 10px 2px #fff,
-                0 0 20px 4px #ff0000;
+        0 0 20px 4px #ff0000;
 }
 
 .two-button-rocker {
     /* background-color: grey; */
-    grid-area: 1/4/3/5;
     display: flex;
     flex-direction: column;
     /* margin: 2vh 0; */
@@ -121,7 +124,15 @@ body {
     /* aspect-ratio: 1; */
 }
 
-.two-button-rocker > button {
+.two-button-rocker.right {
+    grid-area: 1/4/3/5;
+}
+
+.two-button-rocker.left {
+    grid-area: 1/1/3/2;
+}
+
+.two-button-rocker>button {
     flex-grow: 1;
     box-sizing: border-box;
     border-radius: 5px;
